--- a/sass/style.scss
+++ b/sass/style.scss
@@ -50,244 +50,278 @@ box-sizing: border-box; /* IE */
 }
 
 .clear {
-  clear: both;
+clear: both;
 }
 
 .alignright {
-  float: right; 
-  padding: 0 0 10px 10px;
+float: right; 
+padding: 0 0 10px 10px;
 }
 
 .alignleft {
-  float: left; 
-  padding: 0 10px 10px 0;
+float: left; 
+padding: 0 10px 10px 0;
 }
 
 
 // **** --------------- BASE STYLES ----------------- *****//
 
 body, h1, h2, h3, h4 {
-  font-family: 'proxima_nova_rgregular', sans-serif;
+font-family: 'proxima_nova_rgregular', sans-serif;
 }
 
 body {
-  font-size: 100%;
-  width: 100%;
-  line-height: 1.4;
+font-size: 100%;
+width: 100%;
+line-height: 1.4;
 }
 
 a {
-  text-decoration: none;
+text-decoration: none;
 }
 
 h2 {
-  color: $dark-blue;
-  @include fontSemiBold;
-  font-size: 28px;
-  margin-top: 0px;
+color: $dark-blue;
+@include fontSemiBold;
+font-size: 28px;
+margin-top: 0px;
 }
 
 section {
-  padding: 70px 0px;
+padding: 70px 0px;
 }
 
 p {
-  @include fontLight;
-  font-size: 18px;
+@include fontLight;
+font-size: 18px;
 }
 
 
 // ****  HEADER & NAVIGATION ****//
 #header {
-  background: url(../images/header_bg2_placeholder.png) no-repeat $really-dark-blue;
-  height: 800px;
-  background-size: 100%;
-  .headerContent {
-    h1 {
-      font-size: 60px;
-      margin-top: 100px;
-      margin-bottom: 10px;
-      color: $white;
-    }
-    h5 {
-      font-size: 40px;
-      color: $white;
-      margin-top: 5px;
-      margin-bottom: 40px;
-      @include fontLight;
-    }
-    a.learnMore {
-      background-color: $red-pink;
-      border-radius: 30px;
-      padding: 13px 7px;
-      max-width: 180px;
-      display: block;
-      color: $white;
-      display: block;
-      text-align: center;
-      &:hover {
-        background-color: $red-pink-dark;
-      }
-    }
-  }
+background: url(../images/header_bg2_placeholder.png) no-repeat $really-dark-blue;
+height: 800px;
+background-size: 100%;
+.headerContent {
+h1 {
+font-size: 60px;
+margin-top: 100px;
+margin-bottom: 10px;
+color: $white;
+}
+h5 {
+font-size: 40px;
+color: $white;
+margin-top: 5px;
+margin-bottom: 40px;
+@include fontLight;
+}
+a.learnMore {
+background-color: $red-pink;
+border-radius: 30px;
+padding: 13px 7px;
+max-width: 180px;
+display: block;
+color: $white;
+display: block;
+text-align: center;
+&:hover {
+background-color: $red-pink-dark;
+}
+}
+}
 }
 
 nav {
-  li {
-    float: left;
-    padding: 19px;
-    margin-top: 45px;
-    a {
-      text-decoration: none;
-      color: white;
-      letter-spacing: 0.8px;
-    }
-  }
-  #asi-logo {
-    padding-top: 25px;
-    img {
-      display: block;
-      width: 120px;
-      height: auto;
-    }
-  }
+li {
+float: left;
+padding: 19px;
+margin-top: 45px;
+a {
+text-decoration: none;
+color: white;
+letter-spacing: 0.8px;
+}
+}
+#asi-logo {
+padding-top: 25px;
+img {
+display: block;
+width: 120px;
+height: auto;
+}
+}
 }
 
 // **** SECTIONS **** //
 
 .aboutUs {
-  background: url(../images/aboutUs_bg.png) no-repeat $white-blue;
-  background-size: 100%;
-  // background-position: 30px -75px;
-  // height: 600px;
-  .about-content {
-    line-height: 25px;
-    margin-bottom: 40px;
-    p {
-      color: $main-blue;
-      @include fontLight;
-      font-size: 18px;
-    }
-  }
-  .aboutInfo {
+background: url(../images/aboutUs_bg.png) no-repeat $white-blue;
+background-size: 100%;
+// background-position: 30px -75px;
+// height: 600px;
+.about-content {
+line-height: 25px;
+margin-bottom: 40px;
+p {
+color: $main-blue;
+@include fontLight;
+font-size: 18px;
+}
+}
+.aboutInfo {
+text-align: center;
+margin-bottom: 40px;
+.aboutIconSection {
+.aboutIcon {
+img {
+width: 50px;
+}
+}
+.design_border {
+img {
+width: 35px;
+}
+}
+&.mapIcon {
+margin-left: 90px; 
+}
+&.consultingIcon {
+margin-left: 140px; 
+}
+&.calendarIcon {
+margin-left: 47px; 
+}
+}//.aboutIconSection
+.aboutNumber {
+@include fontSemiBold;
+font-size: 75px;
+color: $dark-blue;
+}
+.aboutNumberText {
+@include fontLight;
+font-size: 16px;
+color: $dark-blue;
+}
+}
+}//.aboutUs
+
+.ourSolutions {
+background-color: $dark-blue;
+color: $white;
+h2 {
+color: $white;
+}
+.solution-box {
+margin-top: 30px;
+p {
+font-size: 15px;
+padding-right: 50px;
+}
+.solutionIcon {
+img {
+width: 50px;
+}
+}
+.design_border {
+img {
+width: 35px;
+}
+}
+}//.solution-box
+}//.ourSolutions
+
+.ourVerticals {
+background-color: $white-blue;
+.vertical-box {
+margin-top: 30px;
+p {
+font-size: 15px;
+padding-right: 50px;
+}
+.verticalIcon {
+img {
+  width: 50px;
+}
+}
+.design_border {
+img {
+  width: 35px;
+}
+}
+}//.solution-box
+}//.ourVerticals
+
+.ourTestimonials {
+background-color: $white;
+.testimonial-box {
+  background-color: $blue-grey;
+  padding: 30px 30px 60px 30px;
+  .quotes {
     text-align: center;
-    margin-bottom: 40px;
-    .aboutIconSection {
-      .aboutIcon {
-        img {
-          width: 50px;
-        }
-      }
-      .design_border {
-        img {
-          width: 35px;
-        }
-      }
-      &.mapIcon {
-        margin-left: 90px; 
-      }
-      &.consultingIcon {
-        margin-left: 140px; 
-      }
-      &.calendarIcon {
-        margin-left: 47px; 
-      }
-    }//.aboutIconSection
-    .aboutNumber {
-      @include fontSemiBold;
-      font-size: 75px;
-      color: $dark-blue;
-    }
-    .aboutNumberText {
-      @include fontLight;
-      font-size: 16px;
-      color: $dark-blue;
+    img {
+      width: 50px;
     }
   }
-  }//.aboutUs
-
-  .ourSolutions {
-    background-color: $dark-blue;
-    color: $white;
-    h2 {
+  .test_author {
+    background-color: $main-blue-light;
+    border-radius: 30px;
+    padding: 10px 7px;
+    max-width: 250px;
+    display: block;
+    margin: auto;
+    margin-bottom: -81px;
+    margin-top: 50px;
+    border-bottom: 2px solid #ff3c32;
+    .personName {
       color: $white;
+      text-align: center;
+      display:block;
+      font-size: 14px;
     }
-    .solution-box {
-      margin-top: 30px;
-      p {
-        font-size: 15px;
-        padding-right: 50px;
-      }
-      .solutionIcon {
-        img {
-          width: 50px;
-        }
-      }
-      .design_border {
-        img {
-          width: 35px;
-        }
-      }
-      }//.solution-box
-      }//.ourSolutions
+    .personTitle {
+      color: $white;
+      text-align: center;
+      display:block;
+      @include fontLight;
+      font-size: 11px;
+    }
+  }
+  }//.testimonial-box
+}
 
-      .ourVerticals {
-        background-color: $white-blue;
-        .vertical-box {
-          margin-top: 30px;
-          p {
-            font-size: 15px;
-            padding-right: 50px;
-          }
-          .verticalIcon {
-            img {
-              width: 50px;
-            }
-          }
-          .design_border {
-            img {
-              width: 35px;
-            }
-          }
-          }//.solution-box
-          }//.ourVerticals
+.ourPartners {
+  background: url(../images/partners_bg.png) no-repeat $dark-blue;
+  background-size: 110%;
+  h2 {
+    color: $white;
+    margin-bottom: 50px;
+  }
+  .partner_logo {
+    img {
+      display: block;
+      margin: auto;
+      margin-bottom: 50px;
+      max-height: 65px;
+    }
+    &.vmware {
+      margin-top: 20px;
+    }
+    &.microsoft {
+      margin-top: 15px;
+    }
+    &.oracle {
+      margin-top: 15px;
+    }
+    &.lexmark {
+      margin-top: 15px;
+    }
+    &.azure {
+      margin-top: 20px;
+    }
+  }
+}
 
-          .ourTestimonials {
-            background-color: $white;
-            .testimonial-box {
-              background-color: $blue-grey;
-              padding: 30px 30px 60px 30px;
-              .quotes {
-                text-align: center;
-                img {
-                  width: 50px;
-                }
-              }
-              .test_author {
-                background-color: $main-blue-light;
-                border-radius: 30px;
-                padding: 10px 7px;
-                max-width: 250px;
-                display: block;
-                margin: auto;
-                margin-bottom: -81px;
-                margin-top: 50px;
-                border-bottom: 2px solid #ff3c32;
-                .personName {
-                  color: $white;
-                  text-align: center;
-                  display:block;
-                  font-size: 14px;
-                }
-                .personTitle {
-                  color: $white;
-                  text-align: center;
-                  display:block;
-                  @include fontLight;
-                  font-size: 11px;
-                }
-              }
-              }//.testimonial-box
-            }
 
-            // **** FOOTER **** //
+
+// **** FOOTER **** //
