--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -3,6 +3,7 @@ $dark-blue: #2e3192;
 $main-blue: #2b47ad;
 $main-blue-light: #425cdb;
 $blue-grey: #dee2ef;
+$blue-grey-dark: #818bac;
 $red-pink: #ff3c32;
 $red-pink-light: #ff806b;
 $red-pink-dark: #f92116;
