--- a/css/mobile.css
+++ b/css/mobile.css
@@ -9,3 +9,10 @@
 @font-face { font-family: 'proxima_novasemibold_italic'; src: url("../fonts/proxima_nova_sbold_it-webfont.eot"); src: url("../fonts/proxima_nova_sbold_it-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proxima_nova_sbold_it-webfont.woff") format("woff"), url("../fonts/proxima_nova_sbold_it-webfont.ttf") format("truetype"), url("../fonts/proxima_nova_sbold_it-webfont.svg#proxima_novasemibold_italic") format("svg"); font-weight: normal; font-style: normal; }
 
 @font-face { font-family: 'proxima_novasemibold'; src: url("../fonts/proxima_nova_sbold-webfont.eot"); src: url("../fonts/proxima_nova_sbold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proxima_nova_sbold-webfont.woff") format("woff"), url("../fonts/proxima_nova_sbold-webfont.ttf") format("truetype"), url("../fonts/proxima_nova_sbold-webfont.svg#proxima_novasemibold") format("svg"); font-weight: normal; font-style: normal; }
+
+@media screen and (max-width: 767px) { #header { height: 700px; }
+  #header nav li { margin-top: 2px; padding: 5px; text-align: right; }
+  #header .headerContent { text-align: center; }
+  #header .headerContent h1 { font-size: 50px; margin-top: 60px; }
+  #header .headerContent h5 { font-size: 24px; }
+  #header .headerContent .learnMore { margin-left: 22px; } }
