--- a/sass/mobile.scss
+++ b/sass/mobile.scss
@@ -8,24 +8,24 @@
 // **** --------------- LARGE DEVICE MEDIA QUERIES ----------------- *****//
 
 @media screen and (max-width: 1120px) {
-  
+
 }
 
 @media screen and (max-width: 970px) {
- 
+
 }
 
 @media screen and (max-width: 920px) {
-  
+
 
 }
 
 @media screen and (max-width: 880px) {
- 
+
 }
 
 @media screen and (max-width: 880px) {
- 
+
 }
 
 @media screen and (max-width: 820px) {
@@ -33,26 +33,49 @@
 }
 
 @media screen and (max-width: 806px) {
-  
+
 }
 
 @media screen and (max-width: 769px) {
-  
+
 }
 
 @media screen and (max-width: 768px) {
- 
+
 }
 
 @media screen and (max-width: 767px) {
+#header {
+	height: 700px;
+	nav {
+		li {
+			margin-top: 2px;
+			padding: 5px;
+			text-align: right;
+		}
+	}
+	.headerContent {
+		text-align: center;
+		h1 {
+			font-size: 50px;
+			margin-top: 60px;
+		}
+		h5 {
+			font-size: 24px;
+		}
+		.learnMore {
+			margin-left: 22px;
+		}
+	}//.headerContent
+}//#header
 } // media query min-width 767px
 
-@media screen and (max-width: 758px) {
+	@media screen and (max-width: 758px) {
 
 }
 
 @media screen and (max-width: 740px) {
-  
+
 }
 
 @media screen and (max-width: 733px) {
@@ -64,31 +87,34 @@
 }
 
 @media screen and (max-width: 666px) {
-  
+
+
 }
 
 @media screen and (max-width: 620px) {
- 
+
 }
 
 @media screen and (max-width: 599px) {
-  
+
 }
 
 @media screen and (max-width: 530px) {
- 
+
 }
 
 @media screen and (max-width: 460px) {
-  
+
+
 }
 
 @media screen and (max-width: 390px) {
-  
+
 }
 
 @media screen and (max-width: 320px) {
-  
+
+
 }
 
 // **** --------------- SMALL DEVICE MEDIA QUERIES ----------------- *****//
