--- a/sass/style.scss
+++ b/sass/style.scss
@@ -136,6 +136,7 @@ nav {
     float: left;
     padding: 19px;
     margin-top: 45px;
+    text-align: center;
     a {
       text-decoration: none;
       color: white;
