--- a/css/mobile.css
+++ b/css/mobile.css
@@ -10,7 +10,7 @@
 
 @font-face { font-family: 'proxima_novasemibold'; src: url("../fonts/proxima_nova_sbold-webfont.eot"); src: url("../fonts/proxima_nova_sbold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proxima_nova_sbold-webfont.woff") format("woff"), url("../fonts/proxima_nova_sbold-webfont.ttf") format("truetype"), url("../fonts/proxima_nova_sbold-webfont.svg#proxima_novasemibold") format("svg"); font-weight: normal; font-style: normal; }
 
-@media screen and (max-width: 767px) { #header { height: 700px; }
+@media screen and (max-width: 767px) { #header { background: url(../images/header_bg2_placeholder.png) no-repeat 72% center fixed #00051d; height: 700px; background-size: 300%; }
   #header nav li { margin-top: 2px; padding: 5px; text-align: right; }
   #header .headerContent { text-align: center; }
   #header .headerContent h1 { font-size: 50px; margin-top: 60px; }
