updating mobile bg image

--- a/sass/mobile.scss
+++ b/sass/mobile.scss
@@ -46,7 +46,7 @@
 
 @media screen and (max-width: 767px) {
 #header {
-	background: url(../images/header_bg2_placeholder.png) no-repeat 72% center fixed #00051d;
+	background: url(../images/header_bg2_placeholder.png) no-repeat 72% center #00051d;
     height: 700px;
     background-size: 300%;
 	nav {
