--- a/sass/style.scss
+++ b/sass/style.scss
@@ -64,6 +64,7 @@ box-sizing: border-box; /* IE */
 
 body, h1, h2, h3, h4 {
   font-family: 'proxima_nova_rgregular', sans-serif;
+  color: $blue-black;
 }
 
 body {
@@ -140,7 +141,7 @@ nav {
     a {
       text-decoration: none;
       color: white;
-      letter-spacing: 0.8px;
+      letter-spacing: 3px;
     }
   }
   #asi-logo {
@@ -165,7 +166,7 @@ nav {
     line-height: 25px;
     margin-bottom: 40px;
     p {
-      color: $main-blue;
+      color: $blue-black;
       @include fontLight;
       font-size: 18px;
     }
@@ -210,7 +211,7 @@ nav {
 .ourSolutions {
   background-color: $dark-blue;
   color: $white;
-  h2 {
+  h2, h3 {
     color: $white;
   }
   .solution-box {
@@ -234,6 +235,7 @@ nav {
 
 .ourVerticals {
   background-color: $white-blue;
+  color: $blue-black;
   .vertical-box {
     margin-top: 30px;
     p {
@@ -243,6 +245,15 @@ nav {
     .verticalIcon {
       img {
         width: 50px;
+        &.lifeSciences-icon {
+          width: 25px;
+        }
+        &.education-icon {
+          width: 34px;
+        }
+        &.government-icon {
+          width: 40px;
+        }
       }
     }
     .design_border {
@@ -309,7 +320,7 @@ background-color: $white;
       display: block;
       margin: auto;
       margin-bottom: 50px;
-      max-height: 65px;
+      max-height: 50px;
     }
     &.vmware {
       margin-top: 20px;
@@ -347,3 +358,32 @@ footer {
     color: $blue-grey-dark;
   }
 }
+
+
+
+// **** ABOUT US PAGE **** //
+.aboutUs-page {
+  #header {
+    height: 500px;
+    text-align: center;
+  }
+  .exec-profile {
+    padding-left: 0px;
+    padding-right: 20px;
+    h3 {
+      margin-bottom: 2px;
+    }
+    span {
+      @include fontLight;
+      font-size: 14px;
+    }
+    img {
+      width: 100%;
+    }
+  }
+  footer {
+    background-color: $white-blue;
+  }
+}
+
+
