--- a/sass/style.scss
+++ b/sass/style.scss
@@ -370,8 +370,10 @@ footer {
   .exec-profile {
     padding-left: 0px;
     padding-right: 20px;
+    padding-bottom: 40px;
     h3 {
       margin-bottom: 2px;
+      margin-top: 5px;
     }
     span {
       @include fontLight;
