our solutions page

--- a/css/style.css
+++ b/css/style.css
@@ -151,3 +151,5 @@ footer .locations_list { color: #818bac; }
 .aboutUs-page .exec-profile img { width: 100%; }
 
 .aboutUs-page footer { background-color: #f2f3f6; }
+
+.ourSolutions-page #header { height: 500px; text-align: center; }
