--- a/sass/style.scss
+++ b/sass/style.scss
@@ -388,4 +388,12 @@ footer {
   }
 }
 
+// **** OUR SOLUTIONS PAGE ****//
+.ourSolutions-page {
+    #header {
+    height: 500px;
+    text-align: center;
+  }
+}
+
 
